--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .content-3-5 .btn:focus,
 .content-3-5 .btn:active {
   outline: none !important;
@@ -171,9 +176,9 @@
   }
 }
 
-.rounded{
-  border:5px solid;
-  border-radius:50%;
-  width:106px;
-  height:93px;
-  }
+.rounded {
+  border: 5px solid;
+  border-radius: 50%;
+  width: 106px;
+  height: 93px;
+}
